src/test/ui/compile-fail-migration/functional-struct-update-noncopyable.nll.stderr
error[E0509]: cannot move out of type `A`, which implements the `Drop` trait
  --> $DIR/functional-struct-update-noncopyable.rs:22:14
   |
LL |     let _b = A { y: Arc::new(3), ..a }; //~ ERROR cannot move out of type `A`
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^ cannot move out of here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0509`.
